--- a/src/App/donatonapp/package.json
+++ b/src/App/donatonapp/package.json
@@ -25,6 +25,8 @@
     "@ngrx/router-store": "^10.1.0",
     "@ngrx/store": "^10.1.0",
     "@ngrx/store-devtools": "^10.1.0",
+    "chart.js": "^2.9.4",
+    "ng2-charts": "^2.4.2",
     "ngx-spinner": "^10.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
